# regexsolver-python

./: LICENSE  README.md  pyproject.toml  requirements.txt  setup.py  test-requirements.txt
.github/workflows/: publish.yml  python.yml
regexsolver/: __init__.py  details.py
tests/: serialization_test.py  term_operation_test.py
tests/assets/: response_error.json  response_generateStrings.json  response_getDetails.json  response_getDetails_empty.json  response_getDetails_infinite.json  response_intersection.json  response_subtraction.json  response_union.json
